--- a/src/main/java/com/mycompany/project/jframehome.form
+++ b/src/main/java/com/mycompany/project/jframehome.form
@@ -60,10 +60,7 @@
                   </Group>
                   <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="panelHM" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="panelHM" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                           <Component id="bttnHome" min="-2" pref="97" max="-2" attributes="0"/>
